fix: correct tooltip wrapping

--- a/packages/website/src/components/inputs/Tooltip.module.css
+++ b/packages/website/src/components/inputs/Tooltip.module.css
@@ -23,7 +23,7 @@
   padding: 0.2rem 1rem;
   text-indent: 0;
   text-shadow: none;
-  white-space: normal;
+  white-space: pre;
   word-wrap: break-word;
   z-index: 10;
   min-width: 6.25rem;
